# trid-auto

./: .gitignore  Cargo.toml  README.md
src/: config.rs  file_processing.rs  main.rs  trid.rs
templates/: results.stpl
