[package]
name = "trid-auto"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo"] }
colored = "3.0.0"
csv = "1.3.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
lazy_static = "1.5.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"
