[package]
name = "trid-auto"
version = "0.1.2"
edition = "2024"
description = "A CLI tool that automates running TrID on multiple files, leveraging parallelism and providing filters based on file name and size."
license = "GPL-3.0"
homepage = "https://github.com/PaulDotSH/trid-auto"
repository = "https://github.com/PaulDotSH/trid-auto"
authors = ["Abrudan Paul - Andrei <paulandreiabrudan@protonmail.com>"]
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "utility", "trid"]

[[bin]]
name = "trid-auto"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo"] }
colored = "3.0.0"
csv = "1.3.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
lazy_static = "1.5.0"
parse-size = "1.1.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"
